# spanish_political_discourse_benchmark

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  Makefile  README.md  bibliography.bib
analysis/: __init__.py
code/: README.md  pyproject.toml
code/src/discourse_classifier/: dataset_inventory.py
configs/: ollama_models.yaml
dataset_documentation/: dataset_card.md
datasheet/: data_statement.md  datasheet.md  release_notes.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_DICTIONARY.md  REPRODUCIBILITY.md  WORKFLOW.md  annotation_workflow.md  bibliography_audit.md  bibliography_gap_report.md  changelog.md  contributing.md  data_availability.md  ethics.md  github_release_checklist_v0.1.0-alpha.md  iberlef_shared_task_proposal.md  pilot_annotation_round_001.md  pipeline.md  release_notes_v0.1.0-alpha.md  reproducibility.md
environment/: environment.yml  latex_packages.md  reproducibility_setup.md  requirements.txt
figures/: README.md
labels/: conceptual_anachronism.tsv  fallacies.tsv  pragmatic_functions.tsv  semantic_vacuity.tsv
notebooks/: README.md
prompts/: fallacy_zero_shot.txt  pragmatic_function_few_shot.txt  pragmatic_function_zero_shot.txt
protocol/: annotation_protocol.md  baseline_model_plan.md  coding_scheme.md  inter_annotator_agreement_plan.md  llm_prompt_registry.md
reports/: artifact_audit.md  parlamint_500_sampling_report.md  parlamint_corpus_statistics.csv  parlamint_corpus_statistics.md  pilot_annotation_report.md
results/: README.md
schemas/: discourse_unit.schema.json  llm_annotation_output.schema.json  (+2 more)
(+200 files in other folders)
