[project]
name = "discourse-classifier"
version = "0.0.0"
description = "TODO: Rule-based political discourse classifier and evaluation tools."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests", "scripts/ingestion/tests", "scripts/segmentation/tests"]
pythonpath = ["."]
